# vp_tree

./: Cargo.toml  README.md
benches/: bench.rs
examples/: bench.rs  example1.rs  example2.rs
src/: distance.rs  heap_item.rs  lib.rs  main.rs  querry.rs  test.rs  vp_tree.rs
tests/: integration.rs
