[package]
name = "vp_tree"
version = "0.1.0"
edition = "2024"
authors = ["Tom Paßberg"]
license = "MIT"
description = "Vantage Point Tree (VPTree) for fast k-NN and radius searches in metric spaces."
repository = "https://github.com/Tomyyy-1337/vp_tree/"
keywords = ["data", "search", "distance", "similarity", "knn"]
categories = ["data-structures", "algorithms"]
readme = "README.md"

[dependencies]
fastrand = "2.3.0"

[dev-dependencies]
criterion = "0.8.1"

[[bench]]
name = "bench"
harness = false